# swarmcog

./: README.md  dev_team_state_1761081460.json  research_team_state_1761081158.json
docs/: CognitiveModelGuide.md  SwarmCog_Architecture.md
examples/: cognitive_cycle_demo.py  cognitive_research_team.py  cognitive_software_team.py
swarm/: __init__.py  agentspace.py  cognitive_agent.py  microkernel.py  swarmcog.py
swarmcog_core/: CMakeLists.txt  README.md
swarmcog_core/bindings/: CMakeLists.txt
swarmcog_core/examples/: Makefile  basic_demo.cpp
swarmcog_core/include/swarmcog/: agentspace.h  cognitive_agent.h  microkernel.h  swarmcog.h  types.h  utils.h
swarmcog_core/src/: agentspace.cpp  cognitive_agent.cpp  microkernel.cpp  swarmcog.cpp  utils.cpp
swarmcog_core/tests/: CMakeLists.txt  test_basic.cpp
tests/: test_agentspace.py  test_cognitive_agent.py  test_swarmcog.py
